Changed paths for data

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "path_import = \"../../Thesis_data/raw_data/\"\n",
-    "path_export = \"../../Thesis_data/processed_data/\""
+    "path_import = \"../../../Thesis_data/raw_data/\"\n",
+    "path_export = \"../../../Thesis_data/processed_data/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -98,11 +98,11 @@
     "#Going through all the CSV files (12, for each month one) related to On-Time Airplane Reporting and concatenating them\n",
     "for i in range(1,13): #13\n",
     "    if i == 1:\n",
-    "        ontime_reporting_montly = pd.read_csv(\"../../Thesis_data/raw_data/ONTIME_REPORTING_\" + str(i) + \".csv\", usecols=cols_ontime_reporting)\n",
+    "        ontime_reporting_montly = pd.read_csv(path_import + \"ONTIME_REPORTING_\" + str(i) + \".csv\", usecols=cols_ontime_reporting)\n",
     "        ontime_reporting_all = ontime_reporting_montly\n",
     "        print(ontime_reporting_all.shape)\n",
     "    else:\n",
-    "        ontime_reporting_montly = pd.read_csv(\"../../Thesis_data/raw_data/ONTIME_REPORTING_\" + str(i) + \".csv\", usecols=cols_ontime_reporting)\n",
+    "        ontime_reporting_montly = pd.read_csv(path_import + \"ONTIME_REPORTING_\" + str(i) + \".csv\", usecols=cols_ontime_reporting)\n",
     "        ontime_reporting_all = pd.concat([ontime_reporting_all, ontime_reporting_montly])\n",
     "        print(ontime_reporting_all.shape)"
    ]
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
    ],
    "source": [
     "#Loading aircraft inventory list and merging it with ontime_reporting_all\n",
-    "aircraft_inventory_data = pd.read_csv(\"../../Thesis_data/raw_data/B43_AIRCRAFT_INVENTORY.csv\", encoding='latin1', usecols=cols_aircraft_inventory)\n",
+    "aircraft_inventory_data = pd.read_csv(path_import + \"B43_AIRCRAFT_INVENTORY.csv\", encoding='latin1', usecols=cols_aircraft_inventory)\n",
     "print(\"Shape of aircraft_inventory_data: \", aircraft_inventory_data.shape)\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
     "ontime_reporting_all = ontime_reporting_all.merge(aircraft_inventory_data, on='TAIL_NUM', how=\"left\")\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -161,15 +161,15 @@
    ],
    "source": [
     "#Loading airport_list and airport_weather and meging it with ontime_reporting_all\n",
-    "airport_list_data = pd.read_csv(\"../../Thesis_data/raw_data/airports_list.csv\", usecols=cols_airport_list)\n",
+    "airport_list_data = pd.read_csv(path_import + \"airports_list.csv\", usecols=cols_airport_list)\n",
     "print(\"Shape of airport_list_data: \", airport_list_data.shape)\n",
-    "airport_weather_data = pd.read_csv(\"../../Thesis_data/raw_data/airport_weather_2019.csv\", usecols=cols_airport_weather)\n",
+    "airport_weather_data = pd.read_csv(path_import + \"airport_weather_2019.csv\", usecols=cols_airport_weather)\n",
     "print(\"Shape of airport_weather_data: \", airport_weather_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,20 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of airport_weather_data before merge:  (38675, 9)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Shape of airport_weather_data before merge:  (38675, 9)\n",
       "Shape of airport_weather_data after merge:  (35025, 10)\n"
      ]
     }
@@ -218,14 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n",
+      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Shape of ontime_reporting_all after merge:  (7441892, 20)\n"
      ]
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +259,13 @@
    ],
    "source": [
     "#Loading US Cities data using predefined columns\n",
-    "us_cities_data = pd.read_csv(\"../../Thesis_data/raw_data/us-cities-demographics-2015.csv\", usecols=cols_us_cities, delimiter=\";\")\n",
+    "us_cities_data = pd.read_csv(path_import + \"us-cities-demographics-2015.csv\", usecols=cols_us_cities, delimiter=\";\")\n",
     "print(\"Shape of us_cities_data: \", us_cities_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -331,12 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Exporting the whole dataset\n",
-    "ontime_reporting_all.to_csv(\"../../Thesis_data/processed_data/ontime_reporting_export.csv\", index=False)"
+    "ontime_reporting_all.to_csv(path_export + \"ontime_reporting_export.csv\", index=False)"
    ]
   }
  ],
