Testing base rf model

--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,6 @@
     "                         \"DEST\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code matches to destination location\n",
     "                         \"DISTANCE_GROUP\", #Miles between ORIGIN and DESTINATION, grouped together by integers,\n",
     "                         \"CRS_DEP_TIME\", #4 digit military time formatting of the planned departure time\n",
-    "                         \"DEP_TIME\", #4 digit military time formatting of the actual departure time\n",
     "                         \"DEP_DEL15\", #Binary number that classifies a delay (1) as: a aircraft departing 15 minutes later than planned\n",
     "                         \"OP_UNIQUE_CARRIER\"\n",
     "                         ]\n",
@@ -69,25 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(583985, 13)\n",
-      "(1117160, 13)\n",
-      "(1749234, 13)\n",
-      "(2361257, 13)\n",
-      "(2997647, 13)\n",
-      "(3634338, 13)\n",
-      "(4293367, 13)\n",
-      "(4951828, 13)\n",
-      "(5557807, 13)\n",
-      "(6193821, 13)\n",
-      "(6796274, 13)\n",
-      "(7422037, 13)\n"
+      "(583985, 12)\n",
+      "(1117160, 12)\n",
+      "(1749234, 12)\n",
+      "(2361257, 12)\n",
+      "(2997647, 12)\n",
+      "(3634338, 12)\n",
+      "(4293367, 12)\n",
+      "(4951828, 12)\n",
+      "(5557807, 12)\n",
+      "(6193821, 12)\n",
+      "(6796274, 12)\n",
+      "(7422037, 12)\n"
      ]
     }
    ],
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +123,8 @@
      "output_type": "stream",
      "text": [
       "Shape of aircraft_inventory_data:  (7383, 3)\n",
-      "Shape of ontime_reporting_all before merge:  (7422037, 13)\n",
-      "Shape of ontime_reporting_all after merge:  (7441892, 15)\n"
+      "Shape of ontime_reporting_all before merge:  (7422037, 12)\n",
+      "Shape of ontime_reporting_all after merge:  (7441892, 14)\n"
      ]
     }
    ],
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +194,7 @@
    ],
    "source": [
     "#Merging airport_list with airport_weather for linking ORIGIN_AIRPORT_ID to NAME\n",
+    "#An left join was made because if an inner join would have been made we would have lost relevant weather data\n",
     "print(\"Shape of airport_weather_data before merge: \", airport_weather_data.shape)\n",
     "airport_weather_data = airport_list_data.merge(airport_weather_data, on=\"NAME\", how=\"left\")\n",
     "print(\"Shape of airport_weather_data after merge: \", airport_weather_data.shape)\n",
@@ -212,28 +212,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of ontime_reporting_all after merge:  (7441892, 20)\n"
+      "Shape of ontime_reporting_all before merge:  (7441892, 14)\n",
+      "Shape of ontime_reporting_all after merge:  (6708260, 19)\n"
      ]
     }
    ],
    "source": [
     "#Merging airport_weather_data with ontime_reporting_all\n",
+    "#An inner join has been chosen here because when weather was missing it was almost completly missing from \n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
-    "ontime_reporting_all = ontime_reporting_all.merge(airport_weather_data, how='left', on=['ORIGIN_AIRPORT_ID', 'MONTH', 'DAY_OF_MONTH'])\n",
+    "ontime_reporting_all = ontime_reporting_all.merge(airport_weather_data, how='inner', on=['ORIGIN_AIRPORT_ID', 'MONTH', 'DAY_OF_MONTH'])\n",
     "print(\"Shape of ontime_reporting_all after merge: \", ontime_reporting_all.shape)"
    ]
   },
@@ -246,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,21 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 20)\n",
-      "Shape of ontime_reporting_all before merge:  (7441892, 23)\n"
+      "Shape of ontime_reporting_all before merge:  (6708260, 19)\n",
+      "Shape of ontime_reporting_all before merge:  (6001976, 22)\n"
      ]
     }
    ],
    "source": [
+    "#Merging on-time reporting with US cities data via an inner join,\n",
+    "#The inner join has been chosen because it is difficult to impute the missing values for each city when doing a left join and would only generate noise and a skewed image\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
-    "ontime_reporting_all = ontime_reporting_all.merge(us_cities_data, how='left', on='ORIGIN_CITY_NAME')\n",
+    "ontime_reporting_all = ontime_reporting_all.merge(us_cities_data, how='inner', on='ORIGIN_CITY_NAME')\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)"
    ]
   },
@@ -331,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
