--- a/_1. Data Preprocessing/1. Data loading and merging.ipynb
+++ b/_1. Data Preprocessing/1. Data loading and merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "                         \"DEST\", #International Air Transport Association's (IATA) Location Identifier code, unique 3 letter code matches to destination location\n",
     "                         \"DISTANCE_GROUP\", #Miles between ORIGIN and DESTINATION, grouped together by integers,\n",
     "                         \"CRS_DEP_TIME\", #4 digit military time formatting of the planned departure time\n",
+    "                         \"CRS_ARR_TIME\", #4 digit military time formatting of the planned arrival time\n",
     "                         \"DEP_DEL15\", #Binary number that classifies a delay (1) as: a aircraft departing 15 minutes later than planned\n",
     "                         \"OP_UNIQUE_CARRIER\"\n",
     "                         ]\n",
@@ -56,7 +57,12 @@
     "                  \"Median Age\",\n",
     "                  \"Total Population\",\n",
     "                  \"Average Household Size\"\n",
-    "                  ]"
+    "                  ]\n",
+    "\n",
+    "cols_airport_geolocation = [\"iata\",\n",
+    "                            \"country_code\",\n",
+    "                            \"latitude\",\n",
+    "                            \"longitude\"]"
    ]
   },
   {
@@ -68,25 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(583985, 12)\n",
-      "(1117160, 12)\n",
-      "(1749234, 12)\n",
-      "(2361257, 12)\n",
-      "(2997647, 12)\n",
-      "(3634338, 12)\n",
-      "(4293367, 12)\n",
-      "(4951828, 12)\n",
-      "(5557807, 12)\n",
-      "(6193821, 12)\n",
-      "(6796274, 12)\n",
-      "(7422037, 12)\n"
+      "(583985, 13)\n",
+      "(1117160, 13)\n",
+      "(1749234, 13)\n",
+      "(2361257, 13)\n",
+      "(2997647, 13)\n",
+      "(3634338, 13)\n",
+      "(4293367, 13)\n",
+      "(4951828, 13)\n",
+      "(5557807, 13)\n",
+      "(6193821, 13)\n",
+      "(6796274, 13)\n",
+      "(7422037, 13)\n"
      ]
     }
    ],
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +129,15 @@
      "output_type": "stream",
      "text": [
       "Shape of aircraft_inventory_data:  (7383, 3)\n",
-      "Shape of ontime_reporting_all before merge:  (7422037, 12)\n",
-      "Shape of ontime_reporting_all after merge:  (7441892, 14)\n"
+      "Shape of ontime_reporting_all before merge:  (7422037, 13)\n",
+      "Shape of ontime_reporting_all after merge:  (7441892, 15)\n"
      ]
     }
    ],
    "source": [
     "#Loading aircraft inventory list and merging it with ontime_reporting_all\n",
+    "#Left joining inventory data on on-time reporting data, this would mean that some aircrafts could have missing values\n",
+    "#These values could be imputed with the mean, it would introduce some noise\n",
     "aircraft_inventory_data = pd.read_csv(path_import + \"B43_AIRCRAFT_INVENTORY.csv\", encoding='latin1', usecols=cols_aircraft_inventory)\n",
     "print(\"Shape of aircraft_inventory_data: \", aircraft_inventory_data.shape)\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -188,15 +196,15 @@
      "output_type": "stream",
      "text": [
       "Shape of airport_weather_data before merge:  (38675, 9)\n",
-      "Shape of airport_weather_data after merge:  (35025, 10)\n"
+      "Shape of airport_weather_data after merge:  (35024, 10)\n"
      ]
     }
    ],
    "source": [
     "#Merging airport_list with airport_weather for linking ORIGIN_AIRPORT_ID to NAME\n",
-    "#An left join was made because if an inner join would have been made we would have lost relevant weather data\n",
+    "#Inner joining weather data on airportlist\n",
     "print(\"Shape of airport_weather_data before merge: \", airport_weather_data.shape)\n",
-    "airport_weather_data = airport_list_data.merge(airport_weather_data, on=\"NAME\", how=\"left\")\n",
+    "airport_weather_data = airport_list_data.merge(airport_weather_data, on=\"NAME\", how=\"inner\")\n",
     "print(\"Shape of airport_weather_data after merge: \", airport_weather_data.shape)\n",
     "\n",
     "#Dropping redundant columns\n",
@@ -212,21 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (7441892, 14)\n",
-      "Shape of ontime_reporting_all after merge:  (6708260, 19)\n"
+      "Shape of ontime_reporting_all before merge:  (7441892, 15)\n",
+      "Shape of ontime_reporting_all after merge:  (6708260, 20)\n"
      ]
     }
    ],
    "source": [
     "#Merging airport_weather_data with ontime_reporting_all\n",
-    "#An inner join has been chosen here because when weather was missing it was almost completly missing from \n",
+    "#Inner joining weather data on on-time reporting, inner join was chosen because it is not representative to impute missing weather data\n",
+    "#This would only introduce noise as location would play a major role in te weather and imputation does not account for this\n",
     "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
     "ontime_reporting_all = ontime_reporting_all.merge(airport_weather_data, how='inner', on=['ORIGIN_AIRPORT_ID', 'MONTH', 'DAY_OF_MONTH'])\n",
     "print(\"Shape of ontime_reporting_all after merge: \", ontime_reporting_all.shape)"
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,15 +308,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of ontime_reporting_all before merge:  (6708260, 19)\n",
-      "Shape of ontime_reporting_all before merge:  (6001976, 22)\n"
+      "Shape of ontime_reporting_all before merge:  (6708260, 20)\n",
+      "Shape of ontime_reporting_all before merge:  (6001976, 23)\n"
      ]
     }
    ],
@@ -323,12 +332,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loading and merging ORIGIN and DESTINATION longitude/latitude with On-Time Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of airport_geolocation_data:  (8970, 4)\n",
+      "Shape of airport_geolocation_data:  (1994, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "airport_geolocation_data = pd.read_csv(path_import + \"airports_geolocation_coordinates.csv\", usecols=cols_airport_geolocation)\n",
+    "print(\"Shape of airport_geolocation_data: \", airport_geolocation_data.shape)\n",
+    "#Dropping all entries exept US airports then dropping the country_code column\n",
+    "airport_geolocation_data = airport_geolocation_data.loc[(airport_geolocation_data[\"country_code\"] == \"US\")]\n",
+    "airport_geolocation_data = airport_geolocation_data.drop(columns=[\"country_code\"])\n",
+    "print(\"Shape of airport_geolocation_data: \", airport_geolocation_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of ontime_reporting_all before merge:  (6001976, 23)\n",
+      "Shape of ontime_reporting_all after merge:  (5952741, 24)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Merging latitude and longitude on the ORIGIN column, then renaming them and dropping redundant columns\n",
+    "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
+    "ontime_reporting_all = ontime_reporting_all.merge(airport_geolocation_data, how='inner', left_on=\"ORIGIN\", right_on='iata')\n",
+    "ontime_reporting_all = ontime_reporting_all.rename(columns = {\"latitude\":\"ORIGIN_LAT\",\"longitude\":\"ORIGIN_LONG\"})\n",
+    "ontime_reporting_all = ontime_reporting_all.drop(columns=[\"iata\", \"ORIGIN\"])\n",
+    "print(\"Shape of ontime_reporting_all after merge: \", ontime_reporting_all.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of ontime_reporting_all before merge:  (5952741, 24)\n",
+      "Shape of ontime_reporting_all after merge:  (5861885, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Merging latitude and longitude on the DEST column, then renaming them and dropping redundant columns\n",
+    "print(\"Shape of ontime_reporting_all before merge: \", ontime_reporting_all.shape)\n",
+    "ontime_reporting_all = ontime_reporting_all.merge(airport_geolocation_data, how='inner', left_on=\"DEST\", right_on='iata')\n",
+    "ontime_reporting_all = ontime_reporting_all.rename(columns = {\"latitude\":\"DEST_LAT\",\"longitude\":\"DEST_LONG\"})\n",
+    "ontime_reporting_all = ontime_reporting_all.drop(columns=[\"iata\", \"DEST\"])\n",
+    "print(\"Shape of ontime_reporting_all after merge: \", ontime_reporting_all.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exporting the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
